--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "lucide-react": "^0.510.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "zustand": "^5.0.5"
